# teamparallel

hw2/: CMakeLists.txt  auto-make  bin.cpp  bin.h  common.cpp  serial.cpp  serial2.cpp
hw2-cmake/: CMakeLists.txt
hw2-cmake/Old_shit/: bin.cpp
hw2-cmake/include/: bin.h  chunk.h  common.h  thing.h
hw2-cmake/src/: bin.cpp  common.cpp  helloworld.cpp  serialOld.cpp
hw2/Old_shit/: bin.h
hw2/include/: common.h
hw2/scripts/: auto-bridges-openmp16  auto-bridges-serial
hw2/src/: autograder.cpp  chunk.cpp  common.cpp  helloworld.cpp  openmp.cpp  openmp_test.cpp  serial.cpp  thing.cpp
